--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-function-bind": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-function-bind": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "@mdx-js/react": "^1.6.22",
     "@rollup/plugin-url": "^4.0.2",
     "@svgr/rollup": "^5.5.0",
@@ -71,11 +71,11 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.1.0",
     "fs-copy-file-sync": "^1.1.1",
@@ -83,7 +83,7 @@
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react": "^16.14.0",
@@ -96,20 +96,20 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^2.4.1",
-    "stylelint": "^13.8.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^3.0.0",
-    "webpack": "^4.44.2"
+    "webpack": "^4.46.0"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
     "clamp-js-main": "^0.11.5",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "react-select": "2.4.4",
     "react-select-event": "^4.1.4",
-    "react-spring": "^9.0.0-rc.3",
-    "react-tapper": "^0.1.18"
+    "react-spring": "^9.2.4",
+    "react-tapper": "^0.1.23"
   },
   "resolutions": {
     "minimist": "^1.2.5"
